--- a/test-output/old/Master Suite/methods-alphabetical.html
+++ b/test-output/old/Master Suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Master Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bb6b86">  <td>24/05/07 10:35:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC001_AccountRegistrationTest@4a9f80d3]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1871312485</td>   <td></td> </tr>
-<tr bgcolor="bb6b86">  <td>24/05/07 10:35:24</td>   <td>20821</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC002_LoginTest@191ae03f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1871312485</td>   <td></td> </tr>
-<tr bgcolor="bb6b86">  <td>24/05/07 10:35:37</td>   <td>34097</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC002_LoginTest@191ae03f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1871312485</td>   <td></td> </tr>
-<tr bgcolor="bb6b86">  <td>24/05/07 10:35:24</td>   <td>20509</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC001_AccountRegistrationTest@4a9f80d3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1871312485</td>   <td></td> </tr>
-<tr bgcolor="9fabad">  <td>24/05/07 10:35:13</td>   <td>9146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_AccountRegistrationTest.verify_account_registration()[pri:0, instance:testCases.TC001_AccountRegistrationTest@4a9f80d3]">verify_account_registration</td> 
-  <td>main@1871312485</td>   <td></td> </tr>
-<tr bgcolor="94f7ae">  <td>24/05/07 10:35:31</td>   <td>27885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_LoginTest.verify_login()[pri:0, instance:testCases.TC002_LoginTest@191ae03f]">verify_login</td> 
-  <td>main@1871312485</td>   <td></td> </tr>
+<tr bgcolor="89b776">  <td>24/12/11 16:18:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC002_LoginTest@51df223b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1360533184</td>   <td></td> </tr>
+<tr bgcolor="89b776">  <td>24/12/11 16:18:06</td>   <td>-6152</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC001_AccountRegistrationTest@1c98290c]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1360533184</td>   <td></td> </tr>
+<tr bgcolor="89b776">  <td>24/12/11 16:18:16</td>   <td>3431</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC002_LoginTest@51df223b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1360533184</td>   <td></td> </tr>
+<tr bgcolor="89b776">  <td>24/12/11 16:18:12</td>   <td>-146</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC001_AccountRegistrationTest@1c98290c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1360533184</td>   <td></td> </tr>
+<tr bgcolor="bb6b86">  <td>24/12/11 16:18:10</td>   <td>-2526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_AccountRegistrationTest.verify_account_registration()[pri:0, instance:testCases.TC001_AccountRegistrationTest@1c98290c]">verify_account_registration</td> 
+  <td>main@1360533184</td>   <td></td> </tr>
+<tr bgcolor="fb9a67">  <td>24/12/11 16:18:14</td>   <td>1792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_LoginTest.verify_login()[pri:0, instance:testCases.TC002_LoginTest@51df223b]">verify_login</td> 
+  <td>main@1360533184</td>   <td></td> </tr>
 </table>
